// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asterisk.md - markdown-verify 1`] = `
*123*
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
_123_

`;

exports[`complex.md - markdown-verify 1`] = `
**Do you want to request a *feature* or report a *bug*?**

*bug*?
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
**Do you want to request a _feature_ or report a _bug_?**

_bug_?

`;

exports[`special.md - markdown-verify 1`] = `
0*1*2

!*1*2

0*1*!

!*1*!

0*1*2

！*1*2

0*1*！

！*1*！

0_1_2

!_1_2

0_1_! <!-- remark-misparsing, should be formatted as \`0_1\\_!\` -->

!_1_!

0_1_2

！_1_2

0_1_！ <!-- remark-misparsing, should be formatted as \`0_1\\_！\` -->

！_1_！
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0*1*2

!*1*2

0*1*!

!_1_!

0*1*2

！*1*2

0*1*！

！_1_！

0_1_2

!\\_1_2

0*1*! <!-- remark-misparsing, should be formatted as \`0_1\\_!\` -->

!_1_!

0_1_2

！\\_1_2

0*1*！ <!-- remark-misparsing, should be formatted as \`0_1\\_！\` -->

！_1_！

`;

exports[`underscore.md - markdown-verify 1`] = `
_123_
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
_123_

`;
